--- a/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
+++ b/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
@@ -50,7 +50,7 @@
                                     <div class="col-md-3">
                                         <div class="form-group form-group-default form-group-default-select2 " style="height: 60px">
                                             <label class="">Customizable Items List</label>
-                                            <select class="full-width select2-hidden-accessible" data-placeholder="Select Item" data-init-plugin="select2" tabindex="-1" aria-hidden="true" data-ng-options="item as item.ItemDescription for item in vm.customizables" data-ng-model="vm.model.selectedCustomizable" data-ng-change="vm.getFixturesForCustomizable(vm.model.selectedCustomizable)">
+                                            <select class="full-width select2-hidden-accessible" data-placeholder="Select Item" data-init-plugin="select2" tabindex="-1" aria-hidden="true" data-ng-options="item as item.ItemName for item in vm.customizables" data-ng-model="vm.model.selectedCustomizable" data-ng-change="vm.getFixturesForCustomizable(vm.model.selectedCustomizable)">
                                                 <option value="">Select Customizable..</option>
                                             </select>
                                             <span class="select2 select2-container select2-container--default select2-container--below select2-container--focus" dir="ltr" style="width: 334px;">
@@ -84,40 +84,20 @@
                     <h3>= <span data-ng-bind="vm.model.houseCostCurrency"></span> <span data-ng-bind="vm.model.totalLoanAmt | currency :''"></span></h3>
                 </div>
                 <div class="panel-body">
+                    <h3>Base house cost  : <span data-ng-bind="vm.model.houseCostCurrency"></span> <span data-ng-bind="vm.model.totalLoanAmt | currency :''"></span></h3>
                     <table class="table cart mb48">
                         <thead>
                         <tr>
-                            <th>&nbsp;</th>
+                             
                             <th>Item</th>
                             <th>Quantity</th>
                             <th>Unit Cost</th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr> 
-                                <th scope="row">
-                                    <button type="button" disabled="disabled" class="remove-item" data-toggle="tooltip" data-placement="top" title="" data-original-title="Remove from cart" >
-                                        <i class="ti-close"></i>
-                                    </button>
-                                </th>
-                                <td>
-                                    <a href="#">
-                                        <img alt="House Image" class="product-thumb" src="~/images/HouseImages/@Model.DesignImage" style="width: 100%" />
-                                    </a>
-                                </td>
-                                <td>
-                                    <span>1</span>
-                                </td>
-                                <td>
-                                    <div data-ng-bind="vm.model.houseCostCurrency"><label></label></div><span data-ng-bind="vm.model.houseCost | currency:''"></span>
-                                </td>
-                        </tr>
+                         
                         <tr data-ng-repeat="(key, value) in vm.model.selectedFixtures">
-                            <th scope="row">
-                                <button type="button" class="remove-item" data-toggle="tooltip" data-placement="top" title="" data-original-title="Remove from cart" data-ng-click="vm.deleteFixture(key)">
-                                    <i class="ti-close"></i>
-                                </button>
-                            </th>
+                           
                             <td>
                                 <a href="#">
                                     <img alt="{{value.ItemDescription}}" class="product-thumb" src="/images/FixturesImages/{{value.ItemImage}}" style="width: 90%"/>
@@ -129,8 +109,8 @@
                             <td>
                                 <span data-ng-bind="vm.model.houseCostCurrency"></span><span data-ng-bind="value.UnitCost | currency:''"></span>
                             </td>
-                        </tr> 
-                       </tbody>
+                        </tr>
+                        </tbody>
                     </table>
                     <form>
                         <h4>You may be elligible for a loan to own this house. </h4>
@@ -144,7 +124,7 @@
                         <div class="form-group form-group-default input-group">
                             <label for="houseEligibility" class="ng-binding">Please enter your monthly.</label>
                             <input autocomplete="off" data-ng-model="vm.model.income" id="houseEligibility" placeholder="Monthly Income here" type="Text" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
-                            <span ng-show="vm.model.tenure && vm.model.income" class="input-group-addon primary p-r-15 p-l-15" style="cursor: pointer;background: #ac5e81" data-ng-click="vm.checkEligibility()">
+                            <span ng-show="vm.model.tenure && vm.model.income" class="input-group-addon primary p-r-15 p-l-15" style="cursor: pointer; background: #ac5e81" data-ng-click="vm.checkEligibility()">
                                 Submit
                             </span>
                         </div>
