--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -98,7 +98,7 @@
 }*@
 
 <script src="~/Scripts/app/eligibility.controller.js"></script>
-
+<script src="~/Scripts/app/myApplications.controller.js"></script>
 @if (route.IndexOf("/profile", StringComparison.Ordinal) > -1)
 {
 
