--- a/ProjectUbuild/Views/Home/Index.cshtml
+++ b/ProjectUbuild/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
                 <img alt="Background Image" class="background-image" src="https://unsplash.imgix.net/photo-1425321395722-b1dd54a97cf3?q=75&fm=jpg&w=1080&fit=max&s=9e4ce3e023621d6f94259eea8fa3b856">
             </div>
             <div class="fs-vid-background">
-                <video muted loop>
+                <video muted  id="ubuild_Video">
 @*                    <source src="~/assets/foundry/video/video2.webm" type="video/webm">*@
 @*                    <source src="~/assets/foundry/video/video2.mp4" type="video/mp4">*@
 @*                    <source src="~/assets/foundry/video/video2.ogv" type="video/ogg">*@
