--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -14,6 +14,7 @@
 <script src="~/assets/plugins/pace/pace.min.js" type="text/javascript"></script>
 <script src="~/assets/plugins/jquery/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src="~/assets/plugins/modernizr.custom.js" type="text/javascript"></script>
+<script src="~/Scripts/popper.min.js"></script>
 <script src="~/assets/plugins/jquery-ui/jquery-ui.min.js" type="text/javascript"></script>
 <script src="~/assets/plugins/jquery-fileupload/vendor/jquery.ui.widget.js"></script>
 <script src="~/assets/plugins/jquery-fileupload/jquery.iframe-transport.js"></script>
