--- a/ProjectUbuild/Views/Account/Login.cshtml
+++ b/ProjectUbuild/Views/Account/Login.cshtml
@@ -43,7 +43,7 @@
                     {
                         @Html.AntiForgeryToken()
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email" })
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "UserName or Email" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Password" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
