--- a/ProjectUbuild/Views/Account/Register.cshtml
+++ b/ProjectUbuild/Views/Account/Register.cshtml
@@ -21,6 +21,7 @@
                     {
                         @Html.AntiForgeryToken()
 
+                        @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", placeholder = "User Name", autocomplete = "off",title="Please choose a user name" , data_toggle="tooltip" })
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email Address", autocomplete = "off",title="Please enter a email address here" , data_toggle="tooltip" })
                         @Html.TextBoxFor(m => m.Firstname, new { @class = "form-control", placeholder = "First name", autocomplete = "off", title = "Please enter your first name here", data_toggle = "tooltip" })
                         @Html.TextBoxFor(m => m.Lastname, new { @class = "form-control", placeholder = "Last name", autocomplete = "off", title = "Please enter a last name here", data_toggle = "tooltip" })
