save house customiztion

--- a/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
+++ b/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
@@ -31,13 +31,48 @@
 </section>
 
 <section class="container-fluid" id="houseDesignWrapper" data-ng-controller="HouseDesignController as vm">
+
     <div class="card-progress" style="background-color: rgba(255, 255, 255, 0.8); display: block;" data-ng-show="vm.ajax">
         <div class="progress-circle-indeterminate progress-circle-master"></div>
     </div>
+   
     <div class="row" style="margin-top: -15px">
         <div class="col-md-8">
             <div class="row">
-                <div class="panel panel-danger">
+
+                <div class="panel panel-success">
+                    <div class="panel-heading ">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="col-sm-4">
+                                    <h4>
+                                        House Image
+                                       
+                                    </h4>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <label class="switch">
+                                                <input type="checkbox">
+                                                <span class="slider round"></span>
+                                            </label>
+                                            <label class="font-weight-bold">3D View</label> 
+                                        </div>
+                                       
+                                    </div>
+                                </div>
+                                @if (Request.IsAuthenticated)
+                                {
+                                    <div class="col-sm-4">
+                                        <button class="btn btn-primary btn-sm pull-right" data-ng-click="vm.saveCustomization()">Save Customization</button>
+                                    </div>
+                                }
+                               
+                            </div>
+                           
+                        </div>
+                    </div>
                     <div class="panel-body">
                         <div class="col-md-12">
                             <img src="~/images/HouseImages/@Model.DesignImage" class="img-responsive img-rounded" alt="House Image">
@@ -84,20 +119,20 @@
                     <h3>= <span data-ng-bind="vm.model.houseCostCurrency"></span> <span data-ng-bind="vm.model.totalLoanAmt | currency :''"></span></h3>
                 </div>
                 <div class="panel-body">
-                    <h4>Base house cost  : <span data-ng-bind="vm.model.houseCostCurrency"></span> <span>@Model.BareDesignCost</span></h4>
+                    <h4>Base house cost : <span data-ng-bind="vm.model.houseCostCurrency"></span> <span>@Model.BareDesignCost</span></h4>
                     <table class="table cart mb48">
                         <thead>
                         <tr>
-                             
+
                             <th>Item</th>
                             <th>Quantity</th>
                             <th>Unit Cost ({{vm.model.houseCostCurrency}})</th>
                         </tr>
                         </thead>
                         <tbody>
-                         
+
                         <tr data-ng-repeat="(key, value) in vm.model.selectedFixtures">
-                           
+
                             <td>
                                 <a href="#">
                                     <img alt="{{value.ItemDescription}}" class="product-thumb" src="/images/FixturesImages/{{value.ItemImage}}" style="width: 90%"/>
