default purpose of loan

--- a/ProjectUbuild/Views/Home/Index.cshtml
+++ b/ProjectUbuild/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
 @*                            We can have a short video clip playing here*@
 @*                        </p>*@
                         
-                        <a class="btn btn-lg btn-filled" href="/fullhouse/index">Apply now</a>
+                        @*<a class="btn btn-lg btn-filled" href="/fullhouse/index">Apply now</a>*@
                     </div>
                 </div>
                 <!--end of row-->
