--- a/ProjectUbuild/assets/foundry/css/custom.css
+++ b/ProjectUbuild/assets/foundry/css/custom.css
@@ -1,4 +1,16 @@
 /****** PLACE YOUR CUSTOM STYLES HERE ******/
+body::-webkit-scrollbar {
+    width: 1em;
+}
+ 
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #d1262b;
+    outline: 1px solid slategrey;
+}
 
 .menu li a {
     color: #d1262b
