--- a/ProjectUbuild/Views/Loan/Apply.cshtml
+++ b/ProjectUbuild/Views/Loan/Apply.cshtml
@@ -158,9 +158,9 @@
                                         </select>
                                     </div>
                                     <div class="form-group">
-                                        <div class="form-group form-group-default required disabled">
+                                        <div class="form-group form-group-default required ">
                                             <label>Purpose of Loan</label>
-                                            <input type="text" class="form-control" readonly="" required="" data-ng-model="vm.applyModel.PurposeofLoan">
+                                            <input type="text" class="form-control"  required="" data-ng-model="vm.applyModel.PurposeofLoan">
                                         </div>
                                     </div>
                                     <div class="form-group">
